Fixed icons not showing

--- a/src/app/workspace/workspace-side-nav/workspace-side-nav.component.scss
+++ b/src/app/workspace/workspace-side-nav/workspace-side-nav.component.scss
@@ -1,6 +1,6 @@
 @import "~@progress/kendo-theme-default/dist/all.scss";
 
-* {
+:not(.k-icon) {
   font-family: sans-serif !important;
 }
 
